css/main.css
/* Set all box sizing to border-box */
html {
    box-sizing: border-box;
}

*,
*::before,
*::after {
    box-sizing: inherit;
}

.hidden {
    font-size: 0;
    color: rgba(251, 251, 251, 0);
    line-height: 0;
    margin: 0;
    padding: 0;
}

/* Set container overflow to hidden to get rid of horizontal scroll */
.container {
    overflow: hidden;
}

/* Insert background image  */
body {
    font-family: 'Fira Sans Condensed', sans-serif;
    font-weight: 400;
    color: #1f1d25;
    background-repeat: repeat;
}

body.paper1 {
    background-image: url(../img/background-paper.jpg);
}

body.canvas1 {
    background-image: url(../img/background-canvas.jpg);
}

body.gold1 {
    background-image: url(../img/background-gold.jpg);
}

body.silver1 {
    background-image: url(../img/background-silver.jpg);
}

/*  set initial fonts */
h1 {
    margin-top: 0;
    font-family: 'Fira Sans Condensed', sans-serif;
    font-weight: bold;
}

h2 {
    font-family: 'Vollkorn', serif;
    font-weight: 900;
    font-size: 1.3rem;
    margin-bottom: 0.5rem;
    padding-top: 0.5rem;
}

h3 {
    font-family: 'Fira Sans Condensed', sans-serif;
    font-weight: 700;
    color: #ed1c24;
    font-size: 1.2rem;
    margin-bottom: 0.5rem;
}

/*  style header */
header {
    background-color: #ffffff;
    padding: 3% 0 0 0;
}

header img {
    padding: 0 1% 0 3%;
    width: 33%;
    display: inline-block;
}

header h1 {
    width: 65%;
    display: inline-block;
    vertical-align: top;
    font-size: 0.85rem;
}

header ul {
    margin: 0;
    padding: 1% 2% 2% 2%;
    display: inline-block;
    width: 49%;
    text-align: center;
    font-size: 0.7rem;
}

Ul {
    list-style-type: none;
}

header nav {
    background-color: #1f1d25;
    color: #ffffff;
}

header nav ul {
    padding: 2% 0;
    width: 100%;
}

main {
    max-width: 1100px;
    padding-left: 2%;
    padding-right: 2%;
    margin: 0 2%;
}

.paper1 main section {
    background-color: rgba(251, 251, 251, 0.75);
    padding: 2%;
    margin: 4% 0;
}

/* Remove double translucent background from section section */
.paper1 main section.featuretext,
.paper1 main section#sponsorlist {
    background-color: rgba(251, 251, 251, 0);
}

.paper1 main section.featuretext,
.featuretext h2 {
    margin-top: 0;
    padding-top: 0;
}

.canvas1 main section {
    padding: 2%;
    margin-top: 2%;
    margin-bottom: 4%;
    background-color: rgba(251, 251, 251, 0.75);
}

.canvas1 main section section {
    background-color: rgba(251, 251, 251, 0);
}

.gold1 main {
    background-color: rgba(251, 251, 251, 0.75);
    margin-top: 2%;
    margin-bottom: 4%;
}

.gold1 main h2 {
    padding-top: 2%;
}

.silver1 main {
    background-color: rgba(251, 251, 251, 0.75);
    padding-bottom: 0.5%;
    margin-bottom: 6%;
}

main figure#featureimage {
    margin: 0;
    border: solid 1rem #1f1d25;
}

main figure img {
    width: 100%;
}

#showabout ul {
    list-style-type: circle;
    padding-left: 1.4rem;
}


#donate {
    position: relative;
    width: 50%;
    margin: 0;
    float: right;
    max-width: 223px;
}


/* Drop shadow for irregular shaped png image of buttons */
.drop-shadow {
    filter: drop-shadow(0 1px 3px rgba(31, 29, 37, 0.5));
}

#donate figcaption {
    font-family: 'Vollkorn', serif;
    font-size: 1.3rem;

    position: absolute;
    top: 15%;
    width: 70%;
    text-align: center;
    margin: 0 15%;
}

a#donatelink {
    text-decoration: none;
}

.red {
    color: #ed1c24;
}

#donatefigure {
    float: right;
    width: 40%;
    margin: 0;
}

#donatefigure img {
    width: 100%;
}

/* I gave the sponsor logo a specific width, so that the text below would stay matching this width as the window resizes. */
#sponsorlogoheader {
    width: 130px;

}


#sponsorlogoheader {
    border-bottom: 1px solid #1f1d25;
    margin: 0;
}

#sponsorlist {
    width: 100%;
}

#sponsorlist img {
    width: 100%;
    max-width: 84px;
    display: inline-block;
    margin: 0 5% 3% 0;
    vertical-align: middle;
}

#sponsorlogoheader img {
    width: 100%;
}

footer {
    background: #ffffff;
}

footer ul {
    display: inline-block;
}

footer ul {
    width: 80%;
    margin: 0 10%;
    padding: 5% 0;
}

footer #donate {
    width: 100%;
}

footer ul li {
    width: calc(96% / 3);
    display: inline-block;
    vertical-align: middle;
}

/* Change to 4 list items with donate button in footer */
.canvas1 footer ul li,
.gold1 footer ul li,
.silver1 footer ul li {
    width: calc(95% / 4);
}

footer ul li:hover {
    filter: drop-shadow(0 1px 3px rgba(31, 29, 37, 0.5));
}

footer ul li a img {
    width: 80%;
    margin: 0 10%;
}

footer p {
    color: rgba(31, 29, 37, 0.5);
    margin: 0;
    padding: 0 0 1% 0;
    text-align: center;
}

/* CLasses page styling */
#card {
    width: 60%;
    max-width: 200px;
    margin: auto;
}

#card img {
    Width: 100%;
    filter: drop-shadow(0 1px 3px rgba(31, 29, 37, 0.5));
}

#policy,
#about {
    color: #406fb6;
    cursor: pointer;
}

#policy:hover,
#about:hover {
    text-decoration: underline;
}

#closepolicy,
#closeabout {
    width: 25px;
    position: relative;
    left: 90%;
    cursor: pointer;
    margin-top: 0.5rem;
}

#showpolicy,
#showabout {
    background-color: rgba(31, 29, 37, 0.1);
    padding: 1% 2% 2% 2%;
}

#showpolicy h3,
#showabout {
    font-size: 1.2rem;
    margin-top: 0;
}

.canvas1 .rightcolumn figure {
    max-width: 286px;
    margin: 1em 0 1em 40px;
}

.rightcolumn p a {
    margin-left: 40px;
}

#featuredworkshops ul,
#weeklyclasses ul {
    list-style-type: circle;
    padding-left: 1.5rem;
}

#levels ul {
    list-style-type: circle;
    padding-left: 1.5rem;
}

#call {
    padding-bottom: 1rem;
}

#call ul li {
    list-style-type: none;
}

#call ul li:first-of-type {
    list-style-type: circle;
}

#call ul li:first-of-type h4 {
    margin-bottom: 0.4rem;
}

#levels ul li {
    padding-bottom: 0.4rem;
}

#levels ul li ul {
    list-style-type: disc;
}

#levels ul li ul li:first-of-type {
    padding-top: 0.4rem;
}

#sites ul,
#call ul {
    padding-left: 1.5rem;
    line-height: 1.35rem;
}

#sites ul li a,
#call a {
    text-decoration: none;
    color: #406fb6;
}

#sites ul li a:hover,
#call a:hover {
    text-decoration: underline;
}

/* Borrowed from codepen: https://codepen.io/profstein/pen/ozrbPJ */
.googleCalendar {
    position: relative;

    /* I set an absolute height because the default looked sqashed */
    height: 200px;
    width: 100%;
    padding-bottom: 50%;
}

.googleCalendar iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

/* Stick footer on calendar page to bottom of the window */
.silver1 footer {
    width: 100%;
    position: fixed;
    bottom: 0;
}

#fullview {
    display: none;
}

@media (min-width: 400px) {

    header h1 {
        font-size: 1rem;
    }

    footer ul {
        padding: 2% 0;
    }

    header ul li {
        font-size: 0.9rem;
    }

    footer ul li a img {
        max-width: 50px;
    }

    .address-block {
        width: 93%;
        position: relative;
        left: 9%;
    }
}

@media (orientation: landscape) and (max-height: 350px) {

    header h1 {
        font-size: 0.8rem;
    }

    header img {
        margin-bottom: 3%;
    }

    .address-block {
        width: 50%;
        position: absolute;
        right: 0;
        left: 38%;
        top: 13%;
    }

    header ul li {
        font-size: 0.7rem;
    }

    footer ul li a img {
        max-width: 50px;
    }

    footer p {
        font-size: 0.5rem;
    }

    footer ul {
        padding: 1% 0;
    }
}

@media (min-width: 600px) {

    header h1 {
        font-size: 1.2rem;
    }



    h2 {
        font-size: 1.5rem;
    }

    .canvas1 h4 {
        margin-bottom: 0;
    }
}

@media (orientation: landscape) and (min-width: 600px) {

    header img {
        padding-bottom: 3%;
    }

    .address-block {
        width: 50%;
        position: absolute;
        right: 0;
        left: 38%;
        top: 9%;
    }
}

@media (orientation: portrait) and (min-width: 700px) {

    header img {
        padding-bottom: 4%;
    }

    .address-block {
        width: 50%;
        position: absolute;
        right: 0;
        left: 38%;
        top: 6%;
    }


}

@media (min-width: 813px) {

    /* Increase font sizes */
    body {
        font-size: 1.2rem;
    }

    header h1 {
        font-size: 1.5rem;
    }

    h2 {
        font-size: 1.8rem;
    }

    h3 {
        font-size: 1.5rem;
    }

    h4 {
        font-size: 1.3rem;
    }

    /* Switch to full calendar view at 813 px */
    #agendaview {
        display: none;
    }

    #fullview {
        display: block;

    }

    .silver1 main {
        margin-bottom: 30%;
    }

    #card {
        position: relative;
        top: -7rem;
        left: 35%;
        right: 0;
        width: 60%;
    }

    #card p {
        margin: 0;
        font-size: 0.9rem;
    }

    #appendAfter p:first-of-type {
        margin-bottom: 0;
    }

    #card img {
        Width: 100%;
        filter: drop-shadow(0 1px 3px rgba(31, 29, 37, 0.5));
    }
}

@media (min-width: 874px) {

    .address-block {
        top: 8%;
    }
}

@media (min-width: 900px) {

    main {
        margin: auto;
    }

    header img {
        max-width: 318px;
    }

    header h1 {
        font-size: 1.8rem;
    }

    #menu-container ul.menu > li > a {
        font-size: 1rem;
    }

    .canvas1 .leftcolumn,
    .canvas1 .rightcolumn {
        width: 59%;
        display: inline-block;
        vertical-align: top;
    }

    .canvas1 .rightcolumn {
        width: 40%;
    }
}

@media (min-width: 1200px) {

    header img {
        padding-bottom: 2%;
    }

    .address-block {
        width: 32%;
        left: 68%;
        top: 5%;
    }
}

@media (min-width: 1300px) {

    .address-block ul li {
        font-size: 1rem;
    }
}

